# Passphrase-Generator

./: README.md
passphraseGenerator/source/: passphraseGenerator_functions.py
passwordGenerator/: passwordGenerator_main.py  pyproject.toml
passwordGenerator/passwordGenerator/tests/: test_passwordGenerator.py
passwordGenerator/source/: passwordGenerator_functions.py
passwordGenerator/tests/: test_passwordGenerator.py
root/: Dockerfile  passphraseGenerator_main.py
root/test_files/: test_passphraseGenerator_main.py
